# ai-news-curator

./: Dockerfile  main.py  pyproject.toml  result.json
byteskript_agent/: agents.py  llm_providers.py  models.py  pipeline.py  prompts.py  telegram_sender.py
byteskript_agent/img_gen/: gen_img.py  json_processor.py  openai_img.py
byteskript_agent/img_gen/card_builder/editor/: README.md  img_composer.py  preset.py  text_drawer.py
byteskript_agent/tools/: playwright_tool.py  serper_tools.py
