[project]
name = "img-gen-agent"
version = "0.1.0"
description = "Image generation agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ag2[gemini,openai]>=0.9.6",
    "google-genai>=1.25.0",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.28",
    "llvmlite>=0.43.0",
    "lxml[html-clean]>=6.0.0",
    "mem0ai>=0.1.114",
    "newspaper3k>=0.2.8",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.2",
    "replicate>=1.0.7",
    "serpapi>=0.1.5",
]
